--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
         <img src="img/WhatsApp Image 2025-09-28 at 23.40.46 (1).jpeg" alt="Milanesas de pollo">
         <div class="carousel-content">
           <h2>¡¡OFERTÓN!!</h2>
-          <p>3KG DE MILANESAS<br>TAN SOLO POR $8.999</p>
+          <p>3KG DE MILANESAS<br>TAN SOLO POR $11.999</p>
         </div>
       </div>
       <div class="carousel-slide">
         <img src="img/pata y muslo.jpg.jpg" alt="pata y muslo">
         <div class="carousel-content">
           <h2>¡¡OFERTÓN!!</h2>
-          <p>5KG DE PATA Y MUSLO<br>TAN SOLO POR $8.999</p>
+          <p>5KG DE PATA Y MUSLO<br>TAN SOLO POR $10.999</p>
         </div>
       </div>
       <div class="carousel-slide">
-        <img src="img/2-pollos.jpg" alt="2 POLLOS">
+        <img src="img/Suprema-De-Pollo-X-Kg-1-5542.webp" alt="suprema de pollo">
         <div class="carousel-content">
           <h2>¡¡OFERTÓN!!</h2>
-          <p>2 POLLOS ENTEROS<br>TAN SOLO POR $9.999</p>
+          <p>2KG DE SUPREMA<br>TAN SOLO POR $13.999</p>
         </div>
       </div>
       <div class="carousel-slide">
         <img src="img/alitas.jpg.jpg" alt="ALITAS">
         <div class="carousel-content">
           <h2>¡¡OFERTÓN!!</h2>
-          <p>ALITAS 5KG<br>TAN SOLO POR $6.999</p>
+          <p>ALITAS 5KG<br>TAN SOLO POR $7.499</p>
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
         </div>
         <div class="product-info">
           <h3>Dos pollos<br>(Grandes)</h3>
-          <div class="product-price">$18.000</div>
+          <div class="product-price">$15.999</div>
         </div>
         </div>
 
